--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,9 +17,11 @@ stages:
       - job: 
         steps:
           - task: TerraformInstaller@1
+            displayName: Installing terraform
             inputs:
               terraformVersion: '1.3.9'
           - task: TerraformTaskV4@4
+            displayName: Terraform init command
             inputs:
               provider: 'azurerm'
               command: 'init'
@@ -28,5 +30,23 @@ stages:
               backendAzureRmStorageAccountName: 'tfstorageaccount12'
               backendAzureRmContainerName: 'tf-container'
               backendAzureRmKey: 'terraform.tfstate'
+          - task: TerraformTaskV4@4
+            displayName: Terraform plan command
+            inputs:
+              provider: 'azurerm'
+              command: 'plan'
+              commandOptions: '-out="plan.out"'
+              environmentServiceNameAzureRM: 'azure_service'
+          - task: CopyFiles@2
+            inputs:
+              SourceFolder: '${System.DefaultWorkingDirectory}'
+              Contents: 'plan.out'
+              TargetFolder: '${Build.ArtifactStagingDirectory}'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
+          
           
    
