Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,7 @@ stages:
               publishLocation: 'Container'
   - stage: Deploying
     displayName: Applying
+    dependsOn: Plan
     jobs:
       - deployment: Deploy
         environment: dev
