--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,9 @@ stages:
             runOnce:
               deploy:
                 steps:
+                - task: TerraformInstaller@1
+                  inputs:
+                    terraformVersion: '1.3.9'
                 - task: DownloadBuildArtifacts@0
                   displayName: 'Download Artifacts'
                   inputs:
