--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,12 +60,17 @@ stages:
                 - task: TerraformInstaller@1
                   inputs:
                     terraformVersion: '1.3.9'
+                - task: CopyFiles@2
+                  inputs:
+                    SourceFolder: '${Pipeline.Workspace}/drop'
+                    Contents: '**'
+                    TargetFolder: '$(System.ArtifactsDirectory)'
                 - task: TerraformTaskV4@4
                   displayName: Terraform init command
                   inputs:
                     provider: 'azurerm'
                     command: 'init'
-                    workingDirectory: '/home/vsts/work/1/drop/'
+                    workingDirectory: '$(System.ArtifactsDirectory)'
                     commandOptions: '-upgrade'
                     backendServiceArm: 'azure_service'
                     backendAzureRmResourceGroupName: 'rishabhpatel'
@@ -76,7 +81,7 @@ stages:
                   inputs:
                     provider: 'azurerm'
                     command: 'apply'
-                    workingDirectory: '/home/vsts/work/1/drop/'
+                    workingDirectory: '$(System.ArtifactsDirectory)'
                     commandOptions: '"plan.out"'
                     environmentServiceNameAzureRM: 'azure_service'
                 
