--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,17 +60,13 @@ stages:
                 - task: TerraformInstaller@1
                   inputs:
                     terraformVersion: '1.3.9'
-                - task: CopyFiles@2
-                  inputs:
-                    SourceFolder: '$(Pipeline.Workspace)/drop'
-                    Contents: '**'
-                    TargetFolder: '$(System.ArtifactsDirectory)'
+              
                 - task: TerraformTaskV4@4
                   displayName: Terraform init command
                   inputs:
                     provider: 'azurerm'
                     command: 'init'
-                    workingDirectory: '$(System.ArtifactsDirectory)'
+                    workingDirectory: '$(Pipeline.Workspace)/drop'
                     commandOptions: '-upgrade'
                     backendServiceArm: 'azure_service'
                     backendAzureRmResourceGroupName: 'rishabhpatel'
@@ -81,7 +77,7 @@ stages:
                   inputs:
                     provider: 'azurerm'
                     command: 'apply'
-                    workingDirectory: '$(System.ArtifactsDirectory)'
+                    workingDirectory: '$(Pipeline.Workspace)/drop'
                     commandOptions: '-lock=false "plan.out" '
                     environmentServiceNameAzureRM: 'azure_service'
                 
