--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,11 +61,7 @@ stages:
                 - task: TerraformInstaller@1
                   inputs:
                     terraformVersion: '1.3.9'
-                - script: |
-                    echo Add other tasks to build, test, and deploy your project.
-                    echo whatever
-                    ls -al
-                  displayName: 'Run a multi-line script'
+                - script: ls -al $(Pipeline.Workspace)/drop
 
                 - task: TerraformTaskV4@4
                   displayName: Terraform init command
