--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,9 @@ stages:
                 - task: TerraformInstaller@1
                   inputs:
                     terraformVersion: '1.3.9'
-                - script: chmod +x $(Pipeline.Workspace)/drop
+                - script: chmod +x $(Pipeline.Workspace)/drop/.terraform/providers/registry.terraform.io/hashicorp/azuread/2.39.0/linux_amd64/terraform-provider-azuread_v2.39.0_x5
+                - script: chmod +x $(Pipeline.Workspace)/drop/.terraform/providers/registry.terraform.io/microsoft/azuredevops/0.5.0/linux_amd64/terraform-provider-azuredevops_v0.5.0
+
 
                 - task: TerraformTaskV4@4
                   displayName: Terraform init command
