--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ stages:
           - task: TerraformInstaller@1
             displayName: Installing terraform
             inputs:
-              terraformVersion: '1.3.9'
+              terraformVersion: latest
           - task: TerraformTaskV4@4
             displayName: Terraform init command
             inputs:
@@ -29,13 +29,13 @@ stages:
               backendAzureRmResourceGroupName: 'rishabhpatel'
               backendAzureRmStorageAccountName: 'tfstorageaccount12'
               backendAzureRmContainerName: 'tf-container'
-              backendAzureRmKey: 'tf/terraform.tfstate'
+              backendAzureRmKey: 'pf/terraform.tfstate'
           - task: TerraformTaskV4@4
             displayName: Terraform plan command
             inputs:
               provider: 'azurerm'
               command: 'plan'
-              commandOptions: '-out="plan.out" -lock=false'
+              commandOptions: '-out="plan.out"'
               environmentServiceNameAzureRM: 'azure_service'
           - script: ls -al
           - task: CopyFiles@2
@@ -60,7 +60,7 @@ stages:
                 steps:
                 - task: TerraformInstaller@1
                   inputs:
-                    terraformVersion: '1.3.9'
+                    terraformVersion: latest
                 - script: chmod +x $(Pipeline.Workspace)/drop/.terraform/providers/registry.terraform.io/hashicorp/azuread/2.39.0/linux_amd64/terraform-provider-azuread_v2.39.0_x5
                 - script: chmod +x $(Pipeline.Workspace)/drop/.terraform/providers/registry.terraform.io/microsoft/azuredevops/0.5.0/linux_amd64/terraform-provider-azuredevops_v0.5.0
 
@@ -71,18 +71,17 @@ stages:
                     provider: 'azurerm'
                     command: 'init'
                     workingDirectory: '$(Pipeline.Workspace)/drop'
-                    commandOptions: '-upgrade'
                     backendServiceArm: 'azure_service'
                     backendAzureRmResourceGroupName: 'rishabhpatel'
                     backendAzureRmStorageAccountName: 'tfstorageaccount12'
                     backendAzureRmContainerName: 'tf-container'
-                    backendAzureRmKey: 'tf/terraform.tfstate'
+                    backendAzureRmKey: 'pf/terraform.tfstate'
                 - task: TerraformTaskV4@4
                   inputs:
                     provider: 'azurerm'
                     command: 'apply'
                     workingDirectory: '$(Pipeline.Workspace)/drop'
-                    commandOptions: '-lock=false "plan.out" '
+                    commandOptions: '"plan.out" '
                     environmentServiceNameAzureRM: 'azure_service'
                 
                 
