Set up CI with Azure Pipelines
[skip ci]

--- a/Pipeline/pipeline2.yml
+++ b/Pipeline/pipeline2.yml
@@ -1,12 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-resources:
-  repositories:
-    - repository: repo
-      type: git
-      name: Terraform gitops/reusable
 trigger:
 - none
 
@@ -14,7 +5,7 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-  - template: terraform-azdev.yml@repo
+  - template: template.yml
     parameters:
       ProjectJson: project.json
       TerraformVars: terraform.tfvars
